--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "botgram": "^2.2.0",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "figlet": "^1.2.1"
   }
